# cmake-deps-test

./: CMakeLists.txt
aux/: CMakeLists.txt  aux.cc  aux.h
aux/include/: aux.h
aux/src/: aux.cc
cmake/: cmSources.cmake
core/: CMakeLists.txt  core.cc  core.h  file1.cc  file2.cc  file2.h
core/algo/: CMakeLists.txt  file1.h
core/include/: core.h
core/src/: core.cc
src/: CMakeLists.txt  main.cc
